[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["jisphording <mail@johannesisphording.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
pillow = "^9.4.0"
openpyxl = "^3.1.1"
pandas = "^1.5.3"
datetime = "^5.0"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
